# piphone

./: CMakeLists.txt  test1.py
env/: pyvenv.cfg
src/: lcd.cpp  lcd.hpp  main.cpp
src/nodes/: FunctionNode.hpp  GroupNode.hpp  LabelNode.hpp  Node.hpp
